--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,8 +11,12 @@ import getSortedPosts from "@utils/getSortedPosts";
 import slugify from "@utils/slugify";
 import { SOCIALS } from "@config";
 import youssoufImage from "/assets/youssouf.jpg";
+import { getFeaturedRepos } from "@utils/getFeaturedRepos";
+import GithubRepoCard from "@components/GithubRepoCard";
 
 const posts = await getCollection("blog");
+const featuredRepos = await getFeaturedRepos();
+console.log(featuredRepos);
 
 const sortedPosts = getSortedPosts(posts);
 const featuredPosts = sortedPosts.filter(({ data }) => data.featured);
@@ -125,6 +129,27 @@ const socialCount = SOCIALS.filter(social => social.active).length;
         </LinkButton>
       </div>
     </section>
+
+
+    <Hr />
+
+    {
+      featuredRepos.length > 0 && (
+        <>
+          <section id="featured">
+            <h2>Open source contribution</h2>
+            <div class="pt-4 grid grid-cols-1 sm:grid-cols-2 gap-4">
+               {featuredRepos.map((repo) => (
+                  <GithubRepoCard
+                    {...repo}
+                  />
+              ))}
+            </div>
+          </section>
+          <Hr />
+        </>
+      )
+    }
   </main>
 
   <Footer />
