--- a/src/layouts/PostDetails.astro
+++ b/src/layouts/PostDetails.astro
@@ -45,6 +45,8 @@ const ogUrl = new URL(ogImage ? ogImage : `${title}.png`, Astro.url.origin)
     <ul class="tags-container">
       {tags.map(tag => <Tag name={slugifyStr(tag)} />)}
     </ul>
+
+    <section class="giscus mx-auto mt-10 w-full" />
   </main>
   <Footer />
 </Layout>
@@ -60,3 +62,22 @@ const ogUrl = new URL(ogImage ? ogImage : `${title}.png`, Astro.url.origin)
     @apply my-8;
   }
 </style>
+
+
+
+<script src="https://giscus.app/client.js"
+    data-repo="yjose/elazizi.com"
+    data-repo-id="MDEwOlJlcG9zaXRvcnkxMjQ5NjM5OTk="
+    data-category="Blog posts"
+    data-category-id="DIC_kwDOB3LMn84CWls1"
+    data-mapping="pathname"
+    data-strict="0"
+    data-reactions-enabled="1"
+    data-emit-metadata="0"
+    data-input-position="top"
+    data-theme="transparent_dark"
+    data-lang="en"
+    data-loading="lazy"
+    crossorigin="anonymous"
+    async>
+  </script>
