--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,11 +13,14 @@ import { SOCIALS } from "@config";
 import { getFeaturedRepos } from "@utils/getFeaturedRepos";
 import GithubRepoCard from "@components/GithubRepoCard";
 import { YoussoufImage } from "@components/YoussoufImage";
+import TalkList from "@components/TalksList";
+import { getSortedTalks } from "@utils/getTalks";
 
 const posts = await getCollection("blog");
 const featuredRepos = await getFeaturedRepos();
 
 const sortedPosts = getSortedPosts(posts);
+const sortedTalks = getSortedTalks();
 
 const socialCount = SOCIALS.filter(social => social.active).length;
 ---
@@ -74,7 +77,7 @@ const socialCount = SOCIALS.filter(social => social.active).length;
     <Hr />
 
     <section id="recent-posts">
-      <h2>Recent Posts</h2>
+      <h2>📜Recent Posts</h2>
       <ul>
         {
           sortedPosts.map(
@@ -107,7 +110,7 @@ const socialCount = SOCIALS.filter(social => social.active).length;
       featuredRepos.length > 0 && (
         <>
           <section id="featured">
-            <h2>Open Source Contributions</h2>
+            <h2>👨‍💻Open Source Contributions</h2>
             <div class="mt-3 grid grid-cols-1 gap-4 pt-4 sm:grid-cols-2">
               {featuredRepos.map(repo => (
                 <GithubRepoCard {...repo} />
@@ -123,10 +126,46 @@ const socialCount = SOCIALS.filter(social => social.active).length;
               </LinkButton>
             </div>
           </section>
-          <Hr />
         </>
       )
     }
+    <Hr />
+
+    <section id="talks">
+      <h2>🎙️Talks</h2>
+      <TalkList talks={sortedTalks} />
+    </section>
+
+    <section id="meet" class="mb-10 flex flex-col items-center">
+      <h2 class="text-[120px] font-bold">🤝</h2>
+      <h2 class="text-3xl font-bold -mt-[22px] mb-6">One Last thing</h2>
+      <p class="text-center mb-4 max-w-xl">
+        Even though a lot of people consider me an introvert person, I still
+        enjoy meeting new people and talking about programming, psychology,
+        philosophy, and life. I’m also passionate about helping newcomers in
+        tech by answering their questions and guiding them through their
+        journey. <br /><br /> If you’d like to chat, click the link below.
+      </p>
+
+      <a
+        class="cursor-pointer hover:text-skin-accent underline decoration-wavy decoration-2 underline-offset-4"
+        onclick="Calendly.initPopupWidget({url: 'https://calendly.com/yjose/meet?hide_event_type_details=1'});return false;"
+      >
+        <svg xmlns="http://www.w3.org/2000/svg" class="transform rotate-180">
+          <path
+            fill="currentColor"
+            d="m11.293 17.293 1.414 1.414L19.414 12l-6.707-6.707-1.414 1.414L15.586 11H6v2h9.586z"
+          ></path>
+        </svg>
+        Let's Meet
+        <svg xmlns="http://www.w3.org/2000/svg">
+          <path
+            fill="currentColor"
+            d="m11.293 17.293 1.414 1.414L19.414 12l-6.707-6.707-1.414 1.414L15.586 11H6v2h9.586z"
+          ></path>
+        </svg>
+      </a>
+    </section>
   </main>
 
   <Footer />
@@ -158,14 +197,28 @@ const socialCount = SOCIALS.filter(social => social.active).length;
 
   /* ===== Featured & Recent Posts Sections ===== */
   #featured,
+  #talks,
+  #meet,
   #recent-posts {
     @apply pb-6 pt-12;
   }
   #featured h2,
+  #talks h2,
   #recent-posts h2 {
-    @apply text-2xl font-semibold tracking-wide;
+    @apply text-3xl font-semibold tracking-wide;
   }
   .all-posts-btn-wrapper {
     @apply my-8 text-center;
   }
 </style>
+
+<!-- Calendly link widget begin -->
+<link
+  href="https://assets.calendly.com/assets/external/widget.css"
+  rel="stylesheet"
+/>
+<script
+  src="https://assets.calendly.com/assets/external/widget.js"
+  type="text/javascript"
+  async
+></script>
