--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -48,9 +48,11 @@ const socialCount = SOCIALS.filter(social => social.active).length;
       </a> -->
 
         <p>
-          I am Youssouf, a human first 🙌, from Morocco 🇲🇦, a full stack web
-          developer 👨🏻‍💻 and an OSS believer. I love working with React and React
-          Native and I admire writing about my programming journey.
+          I am Youssouf, a human first 🙌, from Morocco 🇲🇦, a mobile tribe
+          leader at Obytes and a core team member of the Geekblabla community. I
+          am an open-source believer and a part-time blogger. I mainly enjoy
+          working with React and React Native and sharing my knowledge and
+          experience with others through blog posts and talks.
         </p>
         <p>
           Read more about me on the
