--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,6 +15,7 @@ import GithubRepoCard from "@components/GithubRepoCard";
 import { YoussoufImage } from "@components/YoussoufImage";
 import TalkList from "@components/TalksList";
 import { getSortedTalks } from "@utils/getTalks";
+import CalendlyMeet from "@components/CalendlyMeet.astro";
 
 const posts = await getCollection("blog");
 const featuredRepos = await getFeaturedRepos();
@@ -31,22 +32,6 @@ const socialCount = SOCIALS.filter(social => social.active).length;
     <section id="hero">
       <div class="flex flex-1 flex-col pr-6">
         <h1>👋 Hello!</h1>
-        <!-- <a
-        target="_blank"
-        href="/rss.xml"
-        class="rss-link"
-        aria-label="rss feed"
-        title="RSS Feed"
-      >
-        <svg xmlns="http://www.w3.org/2000/svg" class="rss-icon"
-          ><path
-            d="M19 20.001C19 11.729 12.271 5 4 5v2c7.168 0 13 5.832 13 13.001h2z"
-          ></path><path
-            d="M12 20.001h2C14 14.486 9.514 10 4 10v2c4.411 0 8 3.589 8 8.001z"
-          ></path><circle cx="6" cy="18" r="2"></circle>
-        </svg>
-      </a> -->
-
         <p>
           I am Youssouf, a human first 🙌, from Morocco 🇲🇦, a mobile tribe
           leader at Obytes and a core team member of the Geekblabla community. I
@@ -137,38 +122,9 @@ const socialCount = SOCIALS.filter(social => social.active).length;
       <h2>🎙️Talks</h2>
       <TalkList talks={sortedTalks} />
     </section>
-
-    <section id="meet" class="mb-10 flex flex-col items-center">
-      <h2 class="text-[120px] font-bold">🤝</h2>
-      <h2 class="text-3xl font-bold -mt-[22px] mb-6">One Last thing</h2>
-      <p class="text-center mb-4 max-w-xl">
-        Even though a lot of people consider me an introvert person, I still
-        enjoy meeting new people and talking about programming, psychology,
-        philosophy, and life. I’m also passionate about helping newcomers in
-        tech by answering their questions and guiding them through their
-        journey. <br /><br /> If you’d like to chat, click the link below.
-      </p>
-
-      <a
-        class="cursor-pointer hover:text-skin-accent underline decoration-wavy decoration-2 underline-offset-4"
-        onclick="Calendly.initPopupWidget({url: 'https://calendly.com/yjose/meet?hide_event_type_details=1'});return false;"
-      >
-        <svg xmlns="http://www.w3.org/2000/svg" class="transform rotate-180">
-          <path
-            fill="currentColor"
-            d="m11.293 17.293 1.414 1.414L19.414 12l-6.707-6.707-1.414 1.414L15.586 11H6v2h9.586z"
-          ></path>
-        </svg>
-        Let's Meet
-        <svg xmlns="http://www.w3.org/2000/svg">
-          <path
-            fill="currentColor"
-            d="m11.293 17.293 1.414 1.414L19.414 12l-6.707-6.707-1.414 1.414L15.586 11H6v2h9.586z"
-          ></path>
-        </svg>
-      </a>
-    </section>
   </main>
+
+  <CalendlyMeet />
 
   <Footer />
 </Layout>
@@ -200,7 +156,6 @@ const socialCount = SOCIALS.filter(social => social.active).length;
   /* ===== Featured & Recent Posts Sections ===== */
   #featured,
   #talks,
-  #meet,
   #recent-posts {
     @apply pb-6 pt-12;
   }
@@ -213,14 +168,3 @@ const socialCount = SOCIALS.filter(social => social.active).length;
     @apply my-8 text-center;
   }
 </style>
-
-<!-- Calendly link widget begin -->
-<link
-  href="https://assets.calendly.com/assets/external/widget.css"
-  rel="stylesheet"
-/>
-<script
-  src="https://assets.calendly.com/assets/external/widget.js"
-  type="text/javascript"
-  async
-></script>
