fix favicon + config

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -28,7 +28,7 @@ console.log(activeNav);
               height={LOGO_IMAGE.height}
             />
           ) : (
-            SITE.title
+            <>Youssouf </>
           )
         }
       </a>
