fix:  oss title home page styling

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -157,11 +157,13 @@ const socialCount = SOCIALS.filter(social => social.active).length;
   /* ===== Featured & Recent Posts Sections ===== */
   #featured,
   #talks,
+  #oss,
   #recent-posts {
     @apply pb-6 pt-12;
   }
   #featured h2,
   #talks h2,
+  #oss h2,
   #recent-posts h2 {
     @apply text-3xl font-semibold tracking-wide;
   }
