feat:  github feed post

--- a/src/layouts/PostDetails.astro
+++ b/src/layouts/PostDetails.astro
@@ -66,7 +66,7 @@ const ogUrl = new URL(ogImage ? ogImage : `${title}.png`, Astro.url.origin)
     @apply my-8;
   }
 </style>
-
+<!--  TODO: only activate the script on production  -->
 <script
   src="https://giscus.app/client.js"
   data-repo="yjose/elazizi.com"
