--- a/src/layouts/AboutLayout.astro
+++ b/src/layouts/AboutLayout.astro
@@ -17,7 +17,7 @@ const { frontmatter } = Astro.props;
 ---
 
 <Layout title={`${frontmatter.title} | ${SITE.title}`}>
-  <Header activeNav="about" />
+  <!-- <Header activeNav="about" /> -->
   <Breadcrumbs />
   <main id="main-content">
     <section id="about" class="prose max-w-3xl prose-img:border-0">
