--- a/src/layouts/Posts.astro
+++ b/src/layouts/Posts.astro
@@ -22,7 +22,7 @@ const next = pageNum < totalPages ? "" : "disabled";
 ---
 
 <Layout title={`Posts | ${SITE.title}`}>
-  <Header activeNav="posts" />
+  <!-- <Header activeNav="posts" /> -->
   <Main pageTitle="Posts" pageDesc="All the articles I've posted.">
     <ul>
       {
