--- a/src/layouts/UsesLayout.astro
+++ b/src/layouts/UsesLayout.astro
@@ -16,7 +16,7 @@ const { frontmatter } = Astro.props;
 ---
 
 <Layout title={`${frontmatter.title} | ${SITE.title}`}>
-  <Header activeNav="uses" />
+  <!-- <Header activeNav="uses" /> -->
   <Breadcrumbs />
   <main id="main-content">
     <section id="about" class="prose mb-28 max-w-3xl prose-img:border-0">
