--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -27,7 +27,7 @@ const socialCount = SOCIALS.filter(social => social.active).length;
 ---
 
 <Layout>
-  <Header />
+  <!-- <Header /> -->
   <main id="main-content">
     <section id="hero">
       <div class="flex flex-1 flex-col sm:pr-6">
