--- a/src/pages/tags/[tag].astro
+++ b/src/pages/tags/[tag].astro
@@ -36,7 +36,7 @@ const tagPosts = getPostsByTag(posts, tag);
 ---
 
 <Layout title={`Tag:${tag} | ${SITE.title}`}>
-  <Header activeNav="tags" />
+  <!-- <Header activeNav="tags" /> -->
   <Main
     pageTitle={`Tag:${tag}`}
     pageDesc={`All the articles with the tag "${tag}".`}
