--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,9 @@
 ---
+
 import { SITE } from "@config";
 import "@styles/base.css";
+
+import Header from "@components/Header.astro";
 
 const googleSiteVerification = import.meta.env.PUBLIC_GOOGLE_SITE_VERIFICATION;
 
@@ -103,6 +106,42 @@ const socialImageURL = new URL(
     }
   </head>
   <body>
-    <slot />
+    <Header activeNav="posts" />
+    <div id="swup" class="wrapper">
+      <slot />
+    </div>
   </body>
 </html>
+
+<script>
+import Swup from "swup";
+//@ts-ignore
+import SwupA11yPlugin from "@swup/a11y-plugin";
+//@ts-ignore
+import SwupHeadPlugin from "@swup/head-plugin";
+//@ts-ignore
+import SwupSlideTheme from "@swup/slide-theme";
+//@ts-ignore
+import SwupPreloadPlugin from "@swup/preload-plugin";
+//@ts-ignore
+import SwupProgressPlugin from "@swup/progress-plugin";
+//@ts-ignore
+import SwupScrollPlugin from "@swup/scroll-plugin";
+//@ts-ignore
+import SwupScriptsPlugin from '@swup/scripts-plugin';
+//@ts-ignore
+import SwupGaPlugin from '@swup/ga-plugin';
+
+const swup = new Swup({
+  plugins: [
+    new SwupA11yPlugin(),
+    new SwupHeadPlugin(),
+    new SwupSlideTheme(),
+    new SwupPreloadPlugin(),
+    new SwupProgressPlugin(),
+    new SwupScrollPlugin(),
+    new SwupScriptsPlugin(),
+    // new SwupGaPlugin(),
+  ],
+});
+</script>
