--- a/src/pages/search.astro
+++ b/src/pages/search.astro
@@ -3,7 +3,6 @@ import { getCollection } from "astro:content";
 import { SITE } from "@config";
 import Layout from "@layouts/Layout.astro";
 import Main from "@layouts/Main.astro";
-import Header from "@components/Header.astro";
 import Footer from "@components/Footer.astro";
 import Search from "@components/Search";
 
@@ -19,7 +18,7 @@ const searchList = posts.map(({ data }) => ({
 ---
 
 <Layout title={`Search | ${SITE.title}`}>
-  <Header activeNav="search" />
+  <!-- <Header activeNav="search" /> -->
   <Main pageTitle="Search" pageDesc="Search any article ...">
     <Search client:load searchList={searchList} />
   </Main>
