--- a/src/pages/tags/index.astro
+++ b/src/pages/tags/index.astro
@@ -14,7 +14,7 @@ let tags = getUniqueTags(posts);
 ---
 
 <Layout title={`Tags | ${SITE.title}`}>
-  <Header activeNav="tags" />
+  <!-- <Header activeNav="tags" /> -->
   <Main pageTitle="Tags" pageDesc="All the tags used in posts.">
     <ul>
       {tags.map(tag => <Tag name={tag} size="lg" />)}
