--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -121,10 +121,16 @@ console.log(activeNav);
     @apply absolute -top-full left-16 z-50 bg-skin-accent px-3 py-2 text-skin-inverted transition-all focus:top-4;
   }
   .nav-container {
-    @apply mx-auto flex max-w-3xl flex-col items-center justify-between sm:flex-row;
+    @apply mx-auto flex max-w-3xl flex-col items-center justify-between sm:flex-row bg-skin-fill/5;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 100;
+    backdrop-filter: blur(10px);
   }
   .top-nav-wrap {
-    @apply relative flex w-full items-start justify-between p-4 sm:items-center sm:py-8;
+    @apply relative flex w-full items-start justify-between p-4 sm:items-center sm:py-6;
   }
   .logo {
     @apply absolute py-1 text-xl font-semibold sm:static sm:text-2xl;
@@ -137,10 +143,22 @@ console.log(activeNav);
   }
 
   nav {
-    @apply flex w-full flex-col items-center bg-skin-fill sm:ml-2 sm:flex-row sm:justify-end sm:space-x-4 sm:py-0;
+    @apply flex w-full flex-col items-center  sm:ml-2 sm:flex-row sm:justify-end sm:space-x-4 sm:py-0;
   }
   nav ul {
-    @apply mt-4 grid w-44 grid-cols-2 grid-rows-4 gap-x-2 gap-y-2 sm:ml-0 sm:mt-0 sm:w-auto sm:gap-x-5 sm:gap-y-0;
+    @apply mt-4 grid w-44 grid-cols-2 grid-rows-4 gap-x-2 gap-y-2 sm:ml-0 sm:mt-0 sm:w-auto sm:gap-x-5 sm:gap-y-0 relative;
+  }
+  nav {
+    --border-witdh: 0px;
+    --border-translateX: 0px;
+    --animation-duration: 0.5s;
+  }
+  nav ul::after {
+    content: "";
+    @apply absolute -bottom-1 h-7 border-b-4 transition-all sm:h-0;
+    transform: translateX(var(--border-translateX));
+    width: var(--border-witdh);
+    transition-duration: var(--animation-duration);
   }
   nav ul li {
     @apply col-span-2 flex items-center justify-center;
@@ -195,6 +213,19 @@ console.log(activeNav);
   const menuIcon = document.querySelector(".menu-icon");
   const menuItems = document.querySelector("#menu-items");
 
+  // calculate links boundries, width as well as translatX for evey link based on nav width
+  const links = document.querySelectorAll("#menu-items a");
+  const menuItemsBounding = menuItems?.getBoundingClientRect();
+  let linksBounding: { width: number; translateX: number }[] = [];
+  links?.forEach(link => {
+    const linkBounding = link.getBoundingClientRect();
+    // calculate translateX for each link based on nav width
+    if (menuItemsBounding) {
+      const translateX = linkBounding.x - menuItemsBounding.x;
+      linksBounding.push({ width: linkBounding.width, translateX });
+    }
+  });
+
   menuBtn?.addEventListener("click", () => {
     const menuExpanded = menuBtn.getAttribute("aria-expanded") === "true";
     menuIcon?.classList.toggle("is-active");
@@ -209,14 +240,27 @@ console.log(activeNav);
   // active link on page load
   const selectActiveLink = () => {
     const currentPath = window.location.pathname;
-    const links = document.querySelectorAll("nav a");
-    links.forEach(link => {
+    const nav = document.querySelector("nav");
+    let avtiveLinkInNavItems = false;
+
+    links.forEach((link, index) => {
       if (link.getAttribute("href") === currentPath) {
-        link.classList.add("active");
-      } else {
-        link.classList.remove("active");
+        avtiveLinkInNavItems = true;
+        nav?.style.setProperty(
+          "--border-translateX",
+          `${linksBounding[index].translateX}px`
+        );
+        nav?.style.setProperty(
+          "--border-witdh",
+          `${linksBounding[index].width}px`
+        );
+        // link.classList.add("active");
       }
     });
+    if (!avtiveLinkInNavItems) {
+      nav?.style.setProperty("--border-translateX", `0px`);
+      nav?.style.setProperty("--border-witdh", `0px`);
+    }
     // close menu on phone screen
     // TODO: We can improve this more by using an animation
     menuIcon?.classList.remove("is-active");
