fix: main styling

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -108,7 +108,7 @@ const socialImageURL = new URL(
   </head>
   <body>
     <Header activeNav="posts" />
-    <div id="swup" class="wrapper pt-20">
+    <div id="swup" class="wrapper pt-20 w-full max-w-3xl mx-auto">
       <slot />
     </div>
   </body>
