fix: fix navbar on prod

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -225,6 +225,7 @@ console.log(activeNav);
       linksBounding.push({ width: linkBounding.width, translateX });
     }
   });
+  console.log({ linksBounding });
 
   menuBtn?.addEventListener("click", () => {
     const menuExpanded = menuBtn.getAttribute("aria-expanded") === "true";
