--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -148,12 +148,12 @@ console.log(activeNav);
   nav ul {
     @apply mt-4 grid w-44 grid-cols-2 grid-rows-4 gap-x-2 gap-y-2 sm:ml-0 sm:mt-0 sm:w-auto sm:gap-x-5 sm:gap-y-0 relative;
   }
-  nav {
+  #menu-items {
     --border-witdh: 0px;
     --border-translateX: 0px;
     --animation-duration: 0.5s;
   }
-  nav ul::after {
+  #menu-items:after {
     content: "";
     @apply absolute -bottom-1 h-7 border-b-4 transition-all sm:h-0;
     transform: translateX(var(--border-translateX));
@@ -225,7 +225,6 @@ console.log(activeNav);
       linksBounding.push({ width: linkBounding.width, translateX });
     }
   });
-  console.log({ linksBounding });
 
   menuBtn?.addEventListener("click", () => {
     const menuExpanded = menuBtn.getAttribute("aria-expanded") === "true";
@@ -241,17 +240,19 @@ console.log(activeNav);
   // active link on page load
   const selectActiveLink = () => {
     const currentPath = window.location.pathname;
-    const nav = document.querySelector("nav");
+    console.log({ currentPath });
     let avtiveLinkInNavItems = false;
 
     links.forEach((link, index) => {
       if (link.getAttribute("href") === currentPath) {
         avtiveLinkInNavItems = true;
-        nav?.style.setProperty(
+        //@ts-ignore
+        menuItems?.style.setProperty(
           "--border-translateX",
           `${linksBounding[index].translateX}px`
         );
-        nav?.style.setProperty(
+        //@ts-ignore
+        menuItems?.style.setProperty(
           "--border-witdh",
           `${linksBounding[index].width}px`
         );
@@ -259,8 +260,11 @@ console.log(activeNav);
       }
     });
     if (!avtiveLinkInNavItems) {
-      nav?.style.setProperty("--border-translateX", `0px`);
-      nav?.style.setProperty("--border-witdh", `0px`);
+      console.log("no active link in nav items");
+      //@ts-ignore
+      menuItems?.style.setProperty("--border-translateX", `0px`);
+      //@ts-ignore
+      menuItems?.style.setProperty("--border-witdh", `0px`);
     }
     // close menu on phone screen
     // TODO: We can improve this more by using an animation
