--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -124,3 +124,25 @@
     @apply outline-2 outline-offset-1 outline-skin-fill focus-visible:no-underline focus-visible:outline-dashed;
   }
 }
+
+div[data-remark-code-title] {
+  background-color: #2a6e77;
+  border-top-left-radius: 0.4rem;
+  border-top-right-radius: 0.4rem;
+  color: #fff;
+  padding: 0.2rem 0.5rem;
+  margin-bottom: -4px;
+  padding-bottom: 6px;
+  font-size: 0.875rem;
+  font-weight: 400;
+  font-style: italic;
+  font-family: monospace;
+  width: fit-content;
+  padding-right: 2rem;
+}
+
+div[data-remark-code-title] + pre {
+  margin-top: 0;
+  border-bottom-right-radius: 0.4rem;
+  border-bottom-left-radius: 0.4rem;
+}
