--- a/src/layouts/PostDetails.astro
+++ b/src/layouts/PostDetails.astro
@@ -1,12 +1,12 @@
 ---
 import Layout from "@layouts/Layout.astro";
-import Header from "@components/Header.astro";
 import Footer from "@components/Footer.astro";
 import Tag from "@components/Tag.astro";
 import Datetime from "@components/Datetime";
 import type { CollectionEntry } from "astro:content";
 import { slugifyStr } from "@utils/slugify";
 import PostComments from "@components/PostComments.astro";
+import PageViews from "@components/PageViews.astro";
 
 export interface Props {
   post: CollectionEntry<"blog">;
@@ -20,6 +20,8 @@ const { Content } = await post.render();
 
 const ogUrl = new URL(ogImage ? ogImage : `${title}.png`, Astro.url.origin)
   .href;
+
+const pageUrl = new URL(Astro.url.pathname, Astro.url.origin).href;
 ---
 
 <Layout title={title} author={author} description={description} ogImage={ogUrl}>
@@ -40,7 +42,12 @@ const ogUrl = new URL(ogImage ? ogImage : `${title}.png`, Astro.url.origin)
   </div>
   <main id="main-content">
     <h1 class="post-title">{title}</h1>
-    <Datetime datetime={pubDatetime} size="lg" className="my-2" />
+    <div class="flex flex-row items-end my-3">
+      <Datetime datetime={pubDatetime} size="lg" className="mr-2" />
+      <span>-</span>
+      <PageViews url={pageUrl} />
+    </div>
+
     <article
       id="article"
       role="article"
