--- a/src/components/PageViews.astro
+++ b/src/components/PageViews.astro
@@ -8,10 +8,8 @@ const encodedUrl = encodeURIComponent(url);
 const counterUrl = `https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=${encodedUrl}&count_bg=%234E763000&title_bg=%237A464600&icon=&icon_color=%23E7E7E7&title=Reads+%28Today+%2F+All+Time%29+%3A&edge_flat=true`;
 ---
 
-<div class=`inline`>
-  <img
-    src={counterUrl}
-    class="scale-[1.3] ml-2 mb-[-2px] origin-bottom-left"
-    id="views-badge"
-  />
-</div>
+<img
+  src={counterUrl}
+  class="scale-[1.3] sm:ml-2 ml-[-3px] mb-[-2px] origin-bottom-left sm:mt-0 mt-4 max-w-full"
+  id="views-badge"
+/>
