--- a/src/layouts/PostDetails.astro
+++ b/src/layouts/PostDetails.astro
@@ -42,9 +42,9 @@ const pageUrl = new URL(Astro.url.pathname, Astro.url.origin).href;
   </div>
   <main id="main-content">
     <h1 class="post-title">{title}</h1>
-    <div class="flex flex-row items-end my-3">
+    <div class="flex flex-row flex-wrap items-end my-3">
       <Datetime datetime={pubDatetime} size="lg" className="mr-2" />
-      <span>-</span>
+      <span class="sm:inline display-none">-</span>
       <PageViews url={pageUrl} />
     </div>
 
