--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -4,6 +4,8 @@ import { SITE } from "@config";
 import "@styles/base.css";
 
 import Header from "@components/Header.astro";
+import { ViewTransitions } from 'astro:transitions';
+
 
 const googleSiteVerification = import.meta.env.PUBLIC_GOOGLE_SITE_VERIFICATION;
 
@@ -81,7 +83,7 @@ const socialImageURL = new URL(
     }
 
     <script is:inline src="/toggle-theme.js" data-swup-ignore-script></script>
-
+    <ViewTransitions />
     <!-- Google tag (gtag.js) -->
     {
       ENEABLE_ANALYTICS && (
@@ -107,44 +109,9 @@ const socialImageURL = new URL(
     }
   </head>
   <body>
-    <Header activeNav="posts" />
-    <div id="swup" class="wrapper pt-16 w-full max-w-3xl mx-auto">
+    <Header  />
+    <div class="wrapper pt-16 w-full max-w-3xl mx-auto">
       <slot />
     </div>
   </body>
 </html>
-
-<script>
-import Swup from "swup";
-//@ts-ignore
-import SwupA11yPlugin from "@swup/a11y-plugin";
-//@ts-ignore
-import SwupHeadPlugin from "@swup/head-plugin";
-//@ts-ignore
-import SwupSlideTheme from "@swup/slide-theme";
-//@ts-ignore
-import SwupPreloadPlugin from "@swup/preload-plugin";
-//@ts-ignore
-import SwupProgressPlugin from "@swup/progress-plugin";
-//@ts-ignore
-import SwupScrollPlugin from "@swup/scroll-plugin";
-//@ts-ignore
-import SwupScriptsPlugin from '@swup/scripts-plugin';
-//@ts-ignore
-import SwupGaPlugin from '@swup/ga-plugin';
-
-const swup = new Swup({
-  plugins: [
-    new SwupA11yPlugin(),
-    new SwupHeadPlugin(),
-    new SwupSlideTheme(),
-    new SwupPreloadPlugin(),
-    new SwupProgressPlugin(),
-    new SwupScrollPlugin(),
-    new SwupScriptsPlugin(),
-    new SwupGaPlugin({
-      gaMeasurementId: "G-N828YWTB5N",
-    }),
-  ],
-});
-</script>
