--- a/src/layouts/PostDetails.astro
+++ b/src/layouts/PostDetails.astro
@@ -6,7 +6,7 @@ import Datetime from "@components/Datetime";
 import type { CollectionEntry } from "astro:content";
 import { slugifyStr } from "@utils/slugify";
 import PostComments from "@components/PostComments.astro";
-import PageViews from "@components/PageViews.astro";
+import PageViews from "@components/page-views.astro";
 
 export interface Props {
   post: CollectionEntry<"blog">;
@@ -18,14 +18,11 @@ const { title, author, description, ogImage, pubDatetime, tags } = post.data;
 
 const { Content } = await post.render();
 
-const ogUrl = new URL(ogImage ? ogImage : `${title}.png`, Astro.url.origin)
-  .href;
 
 const pageUrl = new URL(Astro.url.pathname, Astro.url.origin).href;
 ---
 
-<Layout title={title} author={author} description={description} ogImage={ogUrl}>
-  <!-- <Header /> -->
+<Layout title={title} author={author} description={description} ogImage={ogImage}>
   <div class="mx-auto flex w-full max-w-3xl justify-start px-2">
     <button
       class="focus-outline mb-2 mt-8 flex hover:opacity-75"
@@ -44,7 +41,8 @@ const pageUrl = new URL(Astro.url.pathname, Astro.url.origin).href;
     <h1 class="post-title">{title}</h1>
     <div class="flex flex-row flex-wrap items-end my-3">
       <Datetime datetime={pubDatetime} size="lg" className="mr-2" />
-      <span class="sm:inline display-none">-</span>
+      <span class="sm:inline display-none"> | </span>
+      <!-- <PageViews url={pageUrl} /> -->
       <PageViews url={pageUrl} />
     </div>
 
